samples/_failures_safe/1761715540_7e7d3b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_edd75ce0.c: In function ‘main’:
./samples/SAFE/__tmp_edd75ce0.c:157:9: error: expected expression at end of input
  157 |         if (current_char != 'a' && current_char != 'b' && current_char !=
      |         ^~
./samples/SAFE/__tmp_edd75ce0.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_edd75ce0.c:157:9: error: expected declaration or statement at end of input
